--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-    <div><img src="../img/droga-las.jpg"></div>
+   <div class="container">
+    <div class="foto"></div>
+</div>
 </body>
 
 </html>
